plugins {
    id 'eclipse'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '5.1.+'
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
    id 'org.spongepowered.mixin' version '0.7.+'
}

version = "${minecraft}-${new Date().format("yyyy.MM.dd")}"
group = 'com.lgow.endofherobrine'
archivesBaseName = 'endofherobrine'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"

minecraft {
    mappings channel: 'parchment', version: "${parchment}-${minecraft}"
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
    runs {
        client {
            workingDirectory project.file('run')

            mods {
                endofherobrine {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            mods {
                endofherobrine {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')
            args '--mod', 'archivesBaseName', '--all',
                    '--output', file('src/generated/resources/'),
                    '--existing', file('src/main/resources/')

            mods {
                endofherobrine {
                    source sourceSets.main
                }
            }
        }
    }
}

mixin {
    add sourceSets.main, 'endofherobrine.mixins.refmap.json'
    config 'endofherobrine.mixins.json'
}

repositories {}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft}-${forge}"
//    compileOnly(fg.deobf("mezz.jei:jei-${minecraft}-common-api:${jei}"))
//    compileOnly(fg.deobf("mezz.jei:jei-${minecraft}-forge-api:${jei}"))
//    runtimeOnly(fg.deobf("mezz.jei:jei-${minecraft}-forge:${jei}"))
}

jar {
    manifest {
        attributes([
                "Specification-Title": "The End of Herobrine",
                "Specification-Vendor": "Lgow",
                "Specification-Version": "1",
                "Implementation-Title": project.name,
                "Implementation-Version": project.version,
                "Implementation-Vendor" :"Lgow",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "TweakOrder" : 0
        ])
    }
}

jar.finalizedBy('reobfJar')

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' 
}
